--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 html,
 body {
   scroll-behavior: smooth;
-  font-family: "Raleway", sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 
 :root {
